--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-location": "^14.3.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^8.2.3",
+    "metro-bundler": "^0.22.1",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-maps": "0.31.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
